libs/wingc/src/lsp/snapshots/goto_definition/class_impl.snap
---
source: libs/wingc/src/lsp/goto_definition.rs
---
- originSelectionRange:
    start:
      line: 3
      character: 13
    end:
      line: 3
      character: 23
  targetUri: "file://main.w"
  targetRange:
    start:
      line: 1
      character: 10
    end:
      line: 1
      character: 20
  targetSelectionRange:
    start:
      line: 1
      character: 10
    end:
      line: 1
      character: 20

