libs/wingc/src/lsp/snapshots/goto_definition/goto_module_path.snap
---
source: libs/wingc/src/lsp/goto_definition.rs
---
- originSelectionRange:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 16
  targetUri: "file:///blah.w"
  targetRange:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 0
  targetSelectionRange:
    start:
      line: 0
      character: 0
    end:
      line: 0
      character: 0

