libs/wingc/src/lsp/snapshots/goto_definition/inflight_init_struct_field.snap
---
source: libs/wingc/src/lsp/goto_definition.rs
---
- originSelectionRange:
    start:
      line: 12
      character: 9
    end:
      line: 12
      character: 14
  targetUri: "file://main.w"
  targetRange:
    start:
      line: 2
      character: 2
    end:
      line: 2
      character: 7
  targetSelectionRange:
    start:
      line: 2
      character: 2
    end:
      line: 2
      character: 7

