libs/wingc/src/lsp/snapshots/goto_definition/new_expression_incomplete.snap
---
source: libs/wingc/src/lsp/goto_definition.rs
---
- originSelectionRange:
    start:
      line: 3
      character: 4
    end:
      line: 3
      character: 9
  targetUri: "file://main.w"
  targetRange:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 11
  targetSelectionRange:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 11

