libs/wingc/src/lsp/snapshots/goto_definition/user_defined_type_reference_type.snap
---
source: libs/wingc/src/lsp/goto_definition.rs
---
- originSelectionRange:
    start:
      line: 5
      character: 0
    end:
      line: 5
      character: 3
  targetUri: "file://main.w"
  targetRange:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 9
  targetSelectionRange:
    start:
      line: 1
      character: 6
    end:
      line: 1
      character: 9

