libs/wingc/src/lsp/snapshots/goto_definition/var_in_call.snap
---
source: libs/wingc/src/lsp/goto_definition.rs
---
- originSelectionRange:
    start:
      line: 3
      character: 4
    end:
      line: 3
      character: 7
  targetUri: "file://main.w"
  targetRange:
    start:
      line: 1
      character: 8
    end:
      line: 1
      character: 11
  targetSelectionRange:
    start:
      line: 1
      character: 8
    end:
      line: 1
      character: 11

