libs/wingc/src/lsp/snapshots/goto_definition/variable_same_scope.snap
---
source: libs/wingc/src/lsp/goto_definition.rs
---
- originSelectionRange:
    start:
      line: 3
      character: 17
    end:
      line: 3
      character: 22
  targetUri: "file://main.w"
  targetRange:
    start:
      line: 1
      character: 4
    end:
      line: 1
      character: 9
  targetSelectionRange:
    start:
      line: 1
      character: 4
    end:
      line: 1
      character: 9

